feat(wip): added user login func, updated java entities, added nuxt login and basic chat dashboard